Load med list from backend